# perg

./: .gitignore  .travis.yml  CMakeLists.txt  Controller.cpp  Controller.hpp  File.cpp  Grep.cpp  Grep.hpp  Minibuffer.cpp  Minibuffer.hpp  README.md  StatusBar.cpp  StatusBar.hpp  TextBuffer.cpp  TextBuffer.hpp  TextWindow.cpp  TextWindow.hpp  Window.hpp  main.cpp  makefile  todo.org
demo/: CMakeLists.txt  makefile  todo.org
demo/doc/: uml.dia
demo/source/: ApplicationController.cpp  ApplicationController.hpp  Event.hpp  File.cpp  File.hpp  FileController.cpp  FileController.hpp  Grep.cpp  ITextBuffer.hpp  Line.hpp  Minibuffer.hpp  Region.hpp  StaticTextBuffer.cpp  StatusBar.cpp  StatusBar.hpp  Termkey.cpp  Termkey.hpp  TextBuffer.cpp  TextBuffer.hpp  TextWindow.hpp  Window.cpp  Window.hpp  libtermkey-0.20
demo/source/libtermkey-0.20/: CMakeLists.txt
demo/test/: CMakeLists.txt  TextBufferTest.cpp
doc/: keyboardEventHandling.org  uml.dia
source/: ApplicationController.cpp  ApplicationController.hpp  CMakeLists.txt  Controller.cpp  Controller.hpp  Designations.hpp  Event.cpp  Event.hpp  File.cpp  File.hpp  FileController.cpp  FileController.hpp  Grep.cpp  Grep.hpp  ITextBuffer.hpp  Mark.hpp  Minibuffer.cpp  Region.cpp  StaticTextBuffer.hpp  StatusBar.cpp  StatusBar.hpp  Termkey.cpp  Termkey.hpp  TextBuffer.cpp  TextBuffer.hpp  TextWindow.cpp  TextWindow.hpp  Window.cpp  main.cpp
src/: ApplicationController.cpp  ApplicationController.hpp  ApplicationModel.cpp  ApplicationModel.hpp  CMakeLists.txt  FileController.cpp  FileController.hpp  FileModel.cpp  FileModel.hpp  FileReader.cpp  FileReader.hpp  GrepModel.cpp  GrepModel.hpp  GrepProcessor.cpp  GrepProcessor.hpp  IWorker.cpp  IWorker.hpp  KeyboardInput.cpp  KeyboardInput.hpp  Minibuffer.cpp  Minibuffer.hpp  Ncurses.cpp  Ncurses.hpp  NcursesWindow.cpp  NcursesWindow.hpp  Region.hpp  StatusBar.cpp  StatusBar.hpp  TextModel.hpp  TextWindow.cpp  TextWindow.hpp  TextWindowController.cpp  TextWindowController.hpp  main.cpp
src/exceptions/: FileOpenError.hpp
src/types/: Configuration.hpp  KeyPressed.hpp  Keystroke.hpp  Mark.hpp  Position.hpp  Region.hpp  Text.cpp  Text.hpp  TextView.cpp  TextView.hpp
test/: CMakeLists.txt  GrepTest.cpp  TextBufferTest.cpp
test/benchmarks/: CMakeLists.txt  main.cpp
test/py/: .gitignore  CMakeLists.txt  conftest.py  requirements.txt  test_grepping.py  test_initialization.py  test_minibuffer.py  test_text_window.py  tox.ini
test/ut/: CMakeLists.txt  Miscellaneous.cpp  RegionTests.cpp
test/ut/model/: CMakeLists.txt  GrepProcessorTests.cpp
test/ut/presenter/: CMakeLists.txt
test/ut/tui/: CMakeLists.txt
test/ut/types/: CMakeLists.txt  RegionTests.cpp  TextTests.cpp  TextViewTests.cpp
