include_directories(
  ${PROJECT_SOURCE_DIR}/src
  ${PROJECT_SOURCE_DIR}/3rdparty/gtest
  )

add_executable(${PROJECT_NAME}-ut
  $<TARGET_OBJECTS:gtest>
  MiscellaneousTests.cpp
  RegionTests.cpp
  )

target_link_libraries(${PROJECT_NAME}-ut
  ${PROJECT_NAME}-tui
  pthread
  )

add_test(NAME ${PROJECT_NAME}-ut
  COMMAND ./${PROJECT_NAME}-ut
  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/bin
  )

add_custom_target(${PROJECT_NAME}-ut-run
  COMMAND ${CMAKE_CTEST_COMMAND} --verbose
  DEPENDS ${PROJECT_NAME}-ut
  )
